# EECS-Project-Code

./: CMakeLists.txt  DashboardApp.java  DashboardFrame.java  MessageParser.java  README.md  SensorData.java  TcpSensorServer.java  UdpSensorServer.java  main.c
